WanaLyzer/out/numpy/typing/tests/data/pass/fromnumeric.pyi
from _typeshed import Incomplete

A: Incomplete
B: Incomplete
a: Incomplete
b: Incomplete
c: float
d: Incomplete
