WanaLyzer/out/numpy/typing/tests/data/fail/fromnumeric.pyi
import numpy as np
import numpy.typing as npt
from _typeshed import Incomplete

A: Incomplete
AR_U: npt.NDArray[np.str_]
a: Incomplete
